# nightskyquality

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: commitlint.yml  release.yml
src/nightskyquality/: __init__.py  _alr.py  _config.py  _io.py  _kernel.py  _tiling.py  _types.py  _weights.py
tests/: conftest.py  test_alr_validation.py  test_geographic_validation.py  test_io.py  test_kernel.py  test_numerical_against_perring.py  test_numerical_regression.py  test_synthetic_e2e.py  test_tiling.py  test_weights.py
